[package]
name = "asset-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrypt = "0.10.0"
rust-crypto = "0.2.36"
json = "0.12.4"
aes-gcm = "0.10.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.10.6"
hex = "0.4.3"
rand = "0.8.5"
chrono = "0.4.23"
uint = "0.9.3"